tests/errors/parser-errors/atblock/at_block_missing_key_val.smark
@_tag_@: key:;
body
@_end_@
